llvm/src/snapshots/transmute_llvm__tests__add.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i64 @f(i64 %"l__#sym19", i64 %"r__#sym20") {
entry:
  %add = add i64 %"l__#sym19", %"r__#sym20"
  ret i64 %add
}
