llvm/src/snapshots/transmute_llvm__tests__add_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1Pn(i64)

declare void @_TM0_5print1Pb(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f2Pnn(i64 %"l#param#sym20#", i64 %"r#param#sym21#") gc "shadow-stack" {
entry:
  %"add#" = add i64 %"r#param#sym21#", %"l#param#sym20#"
  ret i64 %"add#"
}

attributes #0 = { nounwind }
