llvm/src/snapshots/transmute_llvm__tests__array_instantiation_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"gcroot#heap#array#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#array#", align 8
  call void @llvm.gcroot(ptr %"gcroot#heap#array#", ptr null)
  %"heap#array#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr ([2 x i64], ptr null, i32 1) to i64), i64 ptrtoint (ptr getelementptr ({ i1, [2 x i64] }, ptr null, i64 0, i32 1) to i64), ptr null)
  store ptr %"heap#array#", ptr %"gcroot#heap#array#", align 8
  %"heap#array#1" = load [2 x i64], ptr %"heap#array#", align 4
  %"heap#array#[0]#" = insertvalue [2 x i64] %"heap#array#1", i64 0, 0
  %"heap#array#[1]#" = insertvalue [2 x i64] %"heap#array#[0]#", i64 1, 1
  store [2 x i64] %"heap#array#[1]#", ptr %"heap#array#", align 4
  ret i64 1
}

attributes #0 = { nounwind }
