llvm/src/snapshots/transmute_llvm__tests__array_let_instantiation_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define void @_TM0_1f0() gc "shadow-stack" {
entry:
  %"a#local#sym18#" = alloca ptr, align 8
  store ptr null, ptr %"a#local#sym18#", align 8
  call void @llvm.gcroot(ptr nonnull %"a#local#sym18#", ptr null)
  %"heap#array#" = call ptr @gc_malloc(i64 16, i64 8, ptr null)
  store i64 0, ptr %"heap#array#", align 4
  %"heap#array#.repack5" = getelementptr inbounds [2 x i64], ptr %"heap#array#", i64 0, i64 1
  store i64 1, ptr %"heap#array#.repack5", align 4
  store ptr %"heap#array#", ptr %"a#local#sym18#", align 8
  call void @gc_run()
  ret void
}

attributes #0 = { nounwind }
